2023-11-20  Georg-Johann Lay  <avr@gjlay.de>

	Don't use __typeof__(x) when x might be an address.  Otherwise, it's
	not possible to print the address of a static array.

	* avrtest.h (LOG_DUMP_A_): New macro.
	(LOG_FMT_ADDR, LOG_PFMT_ADDR): Use it instead of LOG_DUMP_F_.

2023-11-14  Georg-Johann Lay  <avr@gjlay.de>

	* load-flash.c (load_elf) [arch.flash_pm_offset]: Include 0x10000
	in the valid range for addr + memsz + arch.flash_pm_offset.

2023-11-14  Georg-Johann Lay  <avr@gjlay.de>

Support IEEE single and IEEE double emulation.

	* avrtest.h (avrtest_<name>f, avrtest_<name>l, avrtest_<name>_d64):
	New syscalls for <name> in:
	sin, asin, sinh, asinh, cos, acos, cosh, acosh, tan, atan,
	tanh, atanh, sqrt, cbrt, exp, log, trunc, ceil, floor, round,
	pow, atan2, hypot, fmin, fmax, fmod, mul, div, add, sub.
	* host.h (sys_emul_float, sys_emul_double): New protos.
	* host.c (host_double_t): New typedef.
	(sys_emul_float, sys_emul_double, emul_float2, emul_double2)
	(get_reg_float, get_reg_double, set_reg_float, set_reg_double): New
	functions.
	* avrtest.c (func_SYSCALL) [sysno=23]: Call sys_emul_double.
	[sysno=22]: Call sys_emul_float.

2023-10-01  Georg-Johann Lay  <avr@gjlay.de>

Use flash size from section .note.gnu.avr.deviceinfo.

	* testavr.h (exact_log2): New inline function.
	* options.c (get_valid_kilo): Use it, and allow size of -1.
	(parse_args): Move setting of program.pc_mask from here...
	* load-flash.c (load_to_flash): ...to here.
	Adjust check for program size overflow.

2023-09-23  Georg-Johann Lay  <avr@gjlay.de>

Support logging of values like LOG_U8 or LOG_FMT_S32 also with avrtest.

	* avrtest.c (func_SYSCALL): Call sys_log_dump directly.
	* logging.c (sys_log_dump, layout, LEN_LOG_STRING)
	(LEN_LOG_XFMT): Move to...
	* host.c: ...here.  And use log_add() instead of log_append().
	* logging.h (layout_t): Move to host.h.
	* logging.c (do_syscall): Remove cases 7, 8: Don't call sys_log_dump().

2023-09-21  Georg-Johann Lay  <avr@gjlay.de>
